docs: add E7 to CLAUDE.md - config mounts replace, not merge, image defaults
Two separate real outages (log4j console logging near-silenced,
Java 21 checkpoint serialization broken) traced to the same root cause:
docker-compose.yml's ./config/flink:/opt/flink/conf bind mount replaces
Flink's entire conf directory rather than overlaying it, silently
discarding whatever defaults the image shipped that this project's own
config.yaml never carried forward. See DEFENSE.md #26/#32/#35.